--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "~12.0.5",
     "@angular/platform-server": "~12.0.5",
     "@angular/router": "~12.0.5",
+    "@ngneat/tailwind": "7.0.3",
     "@nguniversal/express-engine": "12.0.2",
     "express": "^4.15.2",
     "rxjs": "~6.6.0",
@@ -42,6 +43,10 @@
     "@angular/cli": "~12.0.5",
     "@angular/compiler-cli": "~12.0.5",
     "@nguniversal/builders": "^12.0.2",
+    "@tailwindcss/aspect-ratio": "latest",
+    "@tailwindcss/forms": "latest",
+    "@tailwindcss/line-clamp": "latest",
+    "@tailwindcss/typography": "latest",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
@@ -56,7 +61,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.17",
+    "tailwindcss": "^3.0.18",
     "tslint-angular": "^3.0.3",
     "typescript": "~4.2.3"
   }
