--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "~12.0.5",
     "@angular/platform-server": "~12.0.5",
     "@angular/router": "~12.0.5",
+    "@angular/service-worker": "~12.0.5",
     "@ngneat/tailwind": "7.0.3",
     "@nguniversal/express-engine": "12.0.2",
     "express": "^4.15.2",
